erDiagram
    CHANNELS {
        NUMBER CHANNEL_ID PK "NOT NULL"
        VARCHAR2(20) CHANNEL_DESC "NOT NULL"
        VARCHAR2(20) CHANNEL_CLASS "NOT NULL"
        NUMBER CHANNEL_CLASS_ID "NOT NULL"
        VARCHAR2(13) CHANNEL_TOTAL "NOT NULL"
        NUMBER CHANNEL_TOTAL_ID "NOT NULL"
    }
    COSTS {
        NUMBER PROD_ID "NOT NULL"
        DATE TIME_ID "NOT NULL"
        NUMBER PROMO_ID "NOT NULL"
        NUMBER CHANNEL_ID "NOT NULL"
        NUMBER UNIT_COST "NOT NULL"
        NUMBER UNIT_PRICE "NOT NULL"
    }
    COUNTRIES {
        NUMBER COUNTRY_ID PK "NOT NULL"
        CHAR(2) COUNTRY_ISO_CODE "NOT NULL"
        VARCHAR2(40) COUNTRY_NAME "NOT NULL"
        VARCHAR2(30) COUNTRY_SUBREGION "NOT NULL"
        NUMBER COUNTRY_SUBREGION_ID "NOT NULL"
        VARCHAR2(20) COUNTRY_REGION "NOT NULL"
        NUMBER COUNTRY_REGION_ID "NOT NULL"
        VARCHAR2(11) COUNTRY_TOTAL "NOT NULL"
        NUMBER COUNTRY_TOTAL_ID "NOT NULL"
        VARCHAR2(40) COUNTRY_NAME_HIST
    }
    CUSTOMERS {
        NUMBER CUST_ID PK "NOT NULL"
        VARCHAR2(20) CUST_FIRST_NAME "NOT NULL"
        VARCHAR2(40) CUST_LAST_NAME "NOT NULL"
        CHAR(1) CUST_GENDER "NOT NULL"
        NUMBER CUST_YEAR_OF_BIRTH "NOT NULL"
        VARCHAR2(20) CUST_MARITAL_STATUS
        VARCHAR2(40) CUST_STREET_ADDRESS "NOT NULL"
        VARCHAR2(10) CUST_POSTAL_CODE "NOT NULL"
        VARCHAR2(30) CUST_CITY "NOT NULL"
        NUMBER CUST_CITY_ID "NOT NULL"
        VARCHAR2(40) CUST_STATE_PROVINCE "NOT NULL"
        NUMBER CUST_STATE_PROVINCE_ID "NOT NULL"
        NUMBER COUNTRY_ID "NOT NULL"
        VARCHAR2(25) CUST_MAIN_PHONE_NUMBER "NOT NULL"
        VARCHAR2(30) CUST_INCOME_LEVEL
        NUMBER CUST_CREDIT_LIMIT
        VARCHAR2(50) CUST_EMAIL
        VARCHAR2(14) CUST_TOTAL "NOT NULL"
        NUMBER CUST_TOTAL_ID "NOT NULL"
        NUMBER CUST_SRC_ID
        DATE CUST_EFF_FROM
        DATE CUST_EFF_TO
        VARCHAR2(1) CUST_VALID
    }
    PRODUCTS {
        NUMBER PROD_ID PK "NOT NULL"
        VARCHAR2(50) PROD_NAME "NOT NULL"
        VARCHAR2(4000) PROD_DESC "NOT NULL"
        VARCHAR2(50) PROD_SUBCATEGORY "NOT NULL"
        NUMBER PROD_SUBCATEGORY_ID "NOT NULL"
        VARCHAR2(2000) PROD_SUBCATEGORY_DESC "NOT NULL"
        VARCHAR2(50) PROD_CATEGORY "NOT NULL"
        NUMBER PROD_CATEGORY_ID "NOT NULL"
        VARCHAR2(2000) PROD_CATEGORY_DESC "NOT NULL"
        NUMBER PROD_WEIGHT_CLASS "NOT NULL"
        VARCHAR2(20) PROD_UNIT_OF_MEASURE
        VARCHAR2(30) PROD_PACK_SIZE "NOT NULL"
        NUMBER SUPPLIER_ID "NOT NULL"
        VARCHAR2(20) PROD_STATUS "NOT NULL"
        NUMBER PROD_LIST_PRICE "NOT NULL"
        NUMBER PROD_MIN_PRICE "NOT NULL"
        VARCHAR2(13) PROD_TOTAL "NOT NULL"
        NUMBER PROD_TOTAL_ID "NOT NULL"
        NUMBER PROD_SRC_ID
        DATE PROD_EFF_FROM
        DATE PROD_EFF_TO
        VARCHAR2(1) PROD_VALID
    }
    PROMOTIONS {
        NUMBER PROMO_ID PK "NOT NULL"
        VARCHAR2(30) PROMO_NAME "NOT NULL"
        VARCHAR2(30) PROMO_SUBCATEGORY "NOT NULL"
        NUMBER PROMO_SUBCATEGORY_ID "NOT NULL"
        VARCHAR2(30) PROMO_CATEGORY "NOT NULL"
        NUMBER PROMO_CATEGORY_ID "NOT NULL"
        NUMBER PROMO_COST "NOT NULL"
        DATE PROMO_BEGIN_DATE "NOT NULL"
        DATE PROMO_END_DATE "NOT NULL"
        VARCHAR2(15) PROMO_TOTAL "NOT NULL"
        NUMBER PROMO_TOTAL_ID "NOT NULL"
    }
    SALES {
        NUMBER PROD_ID "NOT NULL"
        NUMBER CUST_ID "NOT NULL"
        DATE TIME_ID "NOT NULL"
        NUMBER CHANNEL_ID "NOT NULL"
        NUMBER PROMO_ID "NOT NULL"
        NUMBER QUANTITY_SOLD "NOT NULL"
        NUMBER AMOUNT_SOLD "NOT NULL"
    }
    SUPPLEMENTARY_DEMOGRAPHICS {
        NUMBER CUST_ID PK "NOT NULL"
        VARCHAR2(21) EDUCATION
        VARCHAR2(21) OCCUPATION
        VARCHAR2(21) HOUSEHOLD_SIZE
        NUMBER YRS_RESIDENCE
        NUMBER AFFINITY_CARD
        NUMBER BULK_PACK_DISKETTES
        NUMBER FLAT_PANEL_MONITOR
        NUMBER HOME_THEATER_PACKAGE
        NUMBER BOOKKEEPING_APPLICATION
        NUMBER PRINTER_SUPPLIES
        NUMBER Y_BOX_GAMES
        NUMBER OS_DOC_SET_KANJI
        VARCHAR2(4000) COMMENTS
    }
    TIMES {
        DATE TIME_ID PK "NOT NULL"
        VARCHAR2(9) DAY_NAME "NOT NULL"
        NUMBER DAY_NUMBER_IN_WEEK "NOT NULL"
        NUMBER DAY_NUMBER_IN_MONTH "NOT NULL"
        NUMBER CALENDAR_WEEK_NUMBER "NOT NULL"
        NUMBER FISCAL_WEEK_NUMBER "NOT NULL"
        DATE WEEK_ENDING_DAY "NOT NULL"
        NUMBER WEEK_ENDING_DAY_ID "NOT NULL"
        NUMBER CALENDAR_MONTH_NUMBER "NOT NULL"
        NUMBER FISCAL_MONTH_NUMBER "NOT NULL"
        VARCHAR2(8) CALENDAR_MONTH_DESC "NOT NULL"
        NUMBER CALENDAR_MONTH_ID "NOT NULL"
        VARCHAR2(8) FISCAL_MONTH_DESC "NOT NULL"
        NUMBER FISCAL_MONTH_ID "NOT NULL"
        NUMBER DAYS_IN_CAL_MONTH "NOT NULL"
        NUMBER DAYS_IN_FIS_MONTH "NOT NULL"
        DATE END_OF_CAL_MONTH "NOT NULL"
        DATE END_OF_FIS_MONTH "NOT NULL"
        VARCHAR2(9) CALENDAR_MONTH_NAME "NOT NULL"
        VARCHAR2(9) FISCAL_MONTH_NAME "NOT NULL"
        CHAR(7) CALENDAR_QUARTER_DESC "NOT NULL"
        NUMBER CALENDAR_QUARTER_ID "NOT NULL"
        CHAR(7) FISCAL_QUARTER_DESC "NOT NULL"
        NUMBER FISCAL_QUARTER_ID "NOT NULL"
        NUMBER DAYS_IN_CAL_QUARTER "NOT NULL"
        NUMBER DAYS_IN_FIS_QUARTER "NOT NULL"
        DATE END_OF_CAL_QUARTER "NOT NULL"
        DATE END_OF_FIS_QUARTER "NOT NULL"
        NUMBER CALENDAR_QUARTER_NUMBER "NOT NULL"
        NUMBER FISCAL_QUARTER_NUMBER "NOT NULL"
        NUMBER CALENDAR_YEAR "NOT NULL"
        NUMBER CALENDAR_YEAR_ID "NOT NULL"
        NUMBER FISCAL_YEAR "NOT NULL"
        NUMBER FISCAL_YEAR_ID "NOT NULL"
        NUMBER DAYS_IN_CAL_YEAR "NOT NULL"
        NUMBER DAYS_IN_FIS_YEAR "NOT NULL"
        DATE END_OF_CAL_YEAR "NOT NULL"
        DATE END_OF_FIS_YEAR "NOT NULL"
    }
    TIMES ||--o{ COSTS : "TIME_ID references TIME_ID"
    CHANNELS ||--o{ COSTS : "CHANNEL_ID references CHANNEL_ID"
    PRODUCTS ||--o{ COSTS : "PROD_ID references PROD_ID"
    PROMOTIONS ||--o{ COSTS : "PROMO_ID references PROMO_ID"
    COUNTRIES ||--o{ CUSTOMERS : "COUNTRY_ID references COUNTRY_ID"
    PRODUCTS ||--o{ SALES : "PROD_ID references PROD_ID"
    PROMOTIONS ||--o{ SALES : "PROMO_ID references PROMO_ID"
    TIMES ||--o{ SALES : "TIME_ID references TIME_ID"
    CHANNELS ||--o{ SALES : "CHANNEL_ID references CHANNEL_ID"
    CUSTOMERS ||--o{ SALES : "CUST_ID references CUST_ID"
    CUSTOMERS ||--o{ SUPPLEMENTARY_DEMOGRAPHICS : "CUST_ID references CUST_ID (logical)"